test/fail_compilation/either.nt
module either;

macro import std.macro.assert;

 void main() {
     (string | int) e = "foo";
     assert(e.case(float f: 1) == 1);
 }
